--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   --bg-white: #fff;
   --bg-light: #fff;
   --bg-dark: #555;
-  --bg-accent: rgb(255, 236, 239);
+  --bg-accent: rgb(252, 240, 242);
 
   --fs-h1: 3rem;
   --fs-h2: 4rem;
@@ -28,6 +28,7 @@ html {
 }
 
 body {
+  height: 100vh;
   font-family: "Roboto", "Arial", sans-serif;
   color: var(--main-text);
   line-height: 1.5;
@@ -42,7 +43,7 @@ a {
 }
 
 a:hover {
-  border-bottom: 1px solid var(--main-text);
+  /* border-bottom: 1px solid var(--main-text); */
   cursor: pointer;
 }
 
@@ -70,6 +71,7 @@ p {
 strong {
   font-weight: 900;
   font-size: 3.5rem;
+  color: black;
 }
 
 h1,
@@ -89,7 +91,6 @@ header {
 
 .header-content {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
@@ -136,12 +137,12 @@ header {
 }
 
 .bg-accent {
-  background-color: var(--bg-white);
-  background: linear-gradient(
+  background-color: var(--bg-accent);
+  /* background: linear-gradient(
     0deg,
     rgb(255, 216, 216, 0.3) 0%,
     rgba(255, 216, 216, 1) 75%
-  );
+  ); */
 }
 
 .flex-start {
@@ -153,14 +154,18 @@ header {
 
 /* Intro */
 
-.intro-text {
-  margin-top: 2rem;
+.avatar {
+  display: none;
+  max-width: 10%;
+  border-radius: 50%;
+  margin-right: 2rem;
 }
 
-.intro-text h1 strong {
-  display: block;
-  font-size: 3.5rem;
-  color: #000;
+.intro-text {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Skills */
@@ -250,6 +255,10 @@ header {
     margin: 0;
   }
 
+  .avatar {
+    display: block;
+  }
+
   .social-list {
     margin: 0;
   }
@@ -260,6 +269,10 @@ header {
 
   .header-content {
     flex-direction: row;
+  }
+
+  .intro-text {
+    justify-content: flex-start;
   }
 
   .skills {
