--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   --bg-accent: rgb(252, 240, 242);
 
   --fs-h1: 3.5rem;
-  --fs-h2: 2rem;
+  --fs-h2: 2.75rem;
   --fs-h3: 1.5rem;
   --fs-p: 1rem;
 }
@@ -86,7 +86,7 @@ h3 {
 header {
   background-color: var(--bg-white);
   padding: 1rem 0;
-  border-bottom: 10px solid var(--bg-dark);
+  border-bottom: 2px solid lightgray;
 }
 
 .header-content {
@@ -170,9 +170,9 @@ header {
 .skill-item {
   width: 95%;
   border-radius: 1rem;
-  margin: 1rem auto;
+  margin: 0 auto;
   padding: 1rem 3rem;
-  box-shadow: 0px 0px 20px 0px rgba(59, 12, 12, 0.1);
+  /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1); */
 }
 
 .skill-icon {
@@ -190,6 +190,7 @@ header {
 
 .skill-icon:hover:after {
   content: attr(data-tooltip);
+  color: #000;
   position: absolute;
   bottom: -0.1rem;
   left: 50%;
@@ -220,18 +221,15 @@ header {
   margin: 2rem auto;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .project-card {
-  height: 350px;
-  width: 350px;
-  border-radius: 1rem;
-  padding: 2rem 2rem 6rem 2rem;
-  margin: 0 auto;
-  background-color: white;
-  box-shadow: 0px 0px 20px 0px rgba(59, 12, 12, 0.1);
+  width: 95%;
+  margin: 0;
   transition: transform 200ms;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
 }
 
 .project-card:hover {
@@ -240,14 +238,11 @@ header {
 
 .img-container {
   position: relative;
-  height: 250px;
 }
 
 .project-img {
   margin: 0 auto;
-  object-fit: cover;
-  height: 100%;
-  box-shadow: 0px 0px 5px 0px rgba(59, 12, 12, 0.1);
+  object-fit: fill;
   background-color: var(--bg-light);
 }
 
@@ -336,22 +331,27 @@ header {
   }
 
   .skills-container {
-    width: 95%;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
   }
 
   .projects-container {
-    width: 95%;
+    width: 100%;
     max-width: 1200px;
     margin-bottom: 3rem;
     margin: 0 auto;
   }
 
   .projects {
-    max-width: 1100px;
-    width: 95%;
+    width: 100%;
     flex-direction: row;
+  }
+
+  .project-card {
+    /* width: 30%; */
+    width: 360px;
+    height: 240px;
   }
 
   .intro-text {
@@ -374,19 +374,15 @@ header {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   .skill-group {
-    max-width: 600px;
+    max-width: 700px;
   }
 }
 
 @media (min-width: 960px) {
-  .project-card {
-    height: 400px;
-    width: 400px;
-  }
 }
 
 @media (min-width: 1300px) {
