--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ header {
 .section {
   background-color: var(--bg-white);
   padding: 2rem 0;
+  margin: 0 auto;
 }
 
 .flex {
@@ -160,6 +161,22 @@ header {
   align-items: center;
 }
 
+.self {
+  height: 95vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  font-size: 4rem;
+}
+
+.title-p {
+  margin: 0 auto;
+  font-size: 2rem;
+  width: 60%;
+}
+
 /* Skills */
 
 .skills {
@@ -171,7 +188,7 @@ header {
   width: 95%;
   border-radius: 1rem;
   margin: 0 auto;
-  padding: 1rem 3rem;
+  padding: 0 3rem;
   /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1); */
 }
 
@@ -201,7 +218,7 @@ header {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: 2rem auto 0 auto;
+  margin: 1rem auto 0 auto;
   gap: 1rem;
   max-width: 300px;
 }
