--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ header {
 
 .skill-group {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 1rem auto 0 auto;
   gap: 1rem;
@@ -396,7 +396,7 @@ header {
   }
 
   .skill-group {
-    max-width: 700px;
+    max-width: 500px;
   }
 }
 
